# cassie

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json  txtx.yml
.github/workflows/: solana-checks.yml
app/: package.json  tsconfig.tsbuildinfo  wrangler.jsonc
app/app/: globals.css  layout.tsx  page.tsx
app/components/: SmoothScroll.tsx
app/components/icons/: Logo.tsx  UseCaseIcons.tsx
app/components/sections/: Architecture.tsx  CTA.tsx  Council.tsx  DeveloperCTA.tsx  Feedback.tsx  Flow.tsx  Footer.tsx  Hero.tsx  Honesty.tsx  HowItWorks.tsx  Mechanics.tsx  Nav.tsx  Problem.tsx  Reputation.tsx  Ticker.tsx  UseCases.tsx
app/components/ui/: Chrome.tsx  CountUp.tsx  Heading.tsx  Logo.tsx  Reveal.tsx  StickyScroll.tsx  TextHoverEffect.tsx  badge.tsx  button.tsx  card.tsx  count-up.tsx  reveal.tsx  section.tsx
app/lib/: site.ts
programs/callback_example/: Cargo.toml
programs/callback_example/src/: lib.rs
programs/cassie/: Cargo.toml
programs/cassie/src/: aggregation.rs  constants.rs  error.rs  events.rs  lib.rs
programs/cassie/tests/: instructions.rs  test_ask.rs  test_callback.rs  test_claim_reward.rs  test_close.rs  test_close_question.rs  test_compute_units.rs  test_council_reward.rs  test_council_vote.rs  test_dispute.rs  test_finalize_council.rs  test_full_flow.rs  test_happy_path.rs  utils.rs  (+5 more)
runbooks/: README.md  setup.tx  txtx.yml
runbooks/deployment/: main.tx  subgraphs.localnet.tx
tests/: config.ts  dev.ts  test.ts
tests/helpers/: cassie-accounts.ts  council.ts  instructions.ts  setup.ts  tokens.ts
(+52 files in other folders)
